<resources>
    <string name="app_name">HOT MOVIES</string>
    <string name="tab_movies">MOVIES</string>
    <string name="tab_tvshow">TV SHOWS</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="synopsis">Synopsis</string>
    <string name="more_info"><![CDATA[more info >>]]></string>
    <string name="rating">9.6</string>
    <string name="user_score">User Score</string>
    <string name="sure">Are you sure want to Exit \?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="english">English</string>
    <string name="bahasa">Bahasa</string>


    <string-array name="titles_array">
        <item>Joker</item>
        <item>Maleficent: Mistress of Evil</item>
        <item>Terminator: Dark Fate</item>
        <item>Ip Man 4: The Finale</item>
        <item>Fast &amp; Furious Presents: Hobbs &amp; Shaw</item>
        <item>Spider-Man: Far from Home</item>
        <item>The Lion King</item>
        <item>El Camino: A Breaking Bad Movie</item>
        <item>The Angry Birds Movie 2</item>
        <item>Zombieland: Double Tap</item>
        <item>Toy Story 4</item>
        <item>Aladdin</item>
        <item>The Mandalorian</item>
        <item>His Dark Materials</item>
        <item>See</item>
        <item>Batwoman</item>
        <item>Carnival Row</item>
        <item>Doom Patrol</item>
        <item>Mortel</item>
        <item>Watchmen</item>
        <item>Case File nº221: Kabukicho</item>
        <item>The Boys</item>
        <item>Dollface</item>
        <item>Mrs. Fletcher</item>
    </string-array>

    <string-array name="dates_array">
        <item>October 4, 2019</item>
        <item>October 18, 2019</item>
        <item>November 1, 2019</item>
        <item>December 20, 2019</item>
        <item>August 2, 2019</item>
        <item>July 2, 2019</item>
        <item>July 19, 2019</item>
        <item>October 11, 2019</item>
        <item>August 14, 2019</item>
        <item>October 18, 2019</item>
        <item>June 21, 2019</item>
        <item>May 24, 2019</item>
        <item>November 12, 2019</item>
        <item>November 3, 2019</item>
        <item>November 1, 2019</item>
        <item>October 6, 2019</item>
        <item>August 29, 2019</item>
        <item>February 15, 2019</item>
        <item>November 21, 2019</item>
        <item>October 20, 2019</item>
        <item>October 11, 2019</item>
        <item>July 25, 2019</item>
        <item>November 15, 2019</item>
        <item>October 27, 2019</item>
    </string-array>

    <string-array name="synopsis_array">
        <item>During the 1980s, a failed stand-up comedian is driven insane and turns to a life of crime and chaos in Gotham City while becoming an infamous psychopathic crime figure.</item>
        <item>Maleficent and her goddaughter Aurora begin to question the complex family ties that bind them as they are pulled in different directions by impending nuptials, unexpected allies, and dark new forces at play.</item>
        <item>More than two decades have passed since Sarah Connor prevented Judgment Day, changed the future, and re-wrote the fate of the human race. Dani Ramos is living a simple life in Mexico City with her brother and father when a highly advanced and deadly new Terminator – a Rev-9 – travels back through time to hunt and kill her. Dani\'s survival depends on her joining forces with two warriors, Grace, an enhanced super-soldier from the future, and a battle-hardened Sarah Connor. As the Rev-9 ruthlessly destroys everything and everyone in its path on the hunt for Dani, the three are led to a T-800 from Sarah\’s past that may be their last best hope.</item>
        <item>Ip Man 4 is an upcoming Hong Kong biographical martial arts film directed by Wilson Yip and produced by Raymond Wong. It is the fourth in the Ip Man film series based on the life of the Wing Chun grandmaster of the same name and features Donnie Yen reprising the role. The film began production in April 2018 and ended in July the same year.</item>
        <item>Ever since US Diplomatic Security Service Agent Hobbs and lawless outcast Shaw first faced off, they just have swapped smacks and bad words. But when cyber-genetically enhanced anarchist Brixton\'s ruthless actions threaten the future of humanity, both join forces to defeat him. (A spin-off of \"The Fate of the Furious\”, focusing on Johnson\'s Luke Hobbs and Statham\'s Deckard Shaw.)</item>
        <item>Peter Parker and his friends go on a summer trip to Europe. However, they will hardly be able to rest - Peter will have to agree to help Nick Fury uncover the mystery of creatures that cause natural disasters and destruction throughout the continent.</item>
        <item>Simba idolises his father, King Mufasa, and takes to heart his own royal destiny. But not everyone in the kingdom celebrates the new cub\'s arrival. Scar, Mufasa\'s brother—and former heir to the throne—has plans of his own. The battle for Pride Rock is ravaged with betrayal, tragedy and drama, ultimately resulting in Simba\'s exile. With help from a curious pair of newfound friends, Simba will have to figure out how to grow up and take back what is rightfully his.</item>
        <item>In the wake of his dramatic escape from captivity, Jesse Pinkman must come to terms with his past in order to forge some kind of future.</item>
        <item>Red, Chuck, Bomb and the rest of their feathered friends are surprised when a green pig suggests that they put aside their differences and unite to fight a common threat. Aggressive birds from an island covered in ice are planning to use an elaborate weapon to destroy the fowl and swine.</item>
        <item>The group will face a new zombie threat as a new breed of zombie has developed. This new super-zombie type is faster, bigger, and stronger than the previous strain of zombies and harder to kill. These super-zombies have started grouping up into a horde going from city to city leaving a path of destruction behind them.</item>
        <item>Woody has always been confident about his place in the world and that his priority is taking care of his kid, whether that\'s Andy or Bonnie. But when Bonnie adds a reluctant new toy called \"Forky\" to her room, a road trip adventure alongside old and new friends will show Woody how big the world can be for a toy.</item>
        <item>A kindhearted street urchin named Aladdin embarks on a magical adventure after finding a lamp that releases a wisecracking genie while a power-hungry Grand Vizier vies for the same lamp that has the power to make their deepest wishes come true.</item>
        <item>Set after the fall of the Empire and before the emergence of the First Order, we follow the travails of a lone gunfighter in the outer reaches of the galaxy far from the authority of the New Republic.</item>
        <item>Lyra is an orphan who lives in a parallel universe in which science, theology and magic are entwined. Lyra\'s search for a kidnapped friend uncovers a sinister plot involving stolen children, and turns into a quest to understand a mysterious phenomenon called Dust. She is later joined on her journey by Will, a boy who possesses a knife that can cut windows between worlds. As Lyra learns the truth about her parents and her prophesied destiny, the two young people are caught up in a war against celestial powers that ranges across many worlds.</item>
        <item>A virus has decimated humankind. Those who survived emerged blind. Centuries later when twins are born with the mythic ability to see, their father must protect his tribe against a threatened queen.</item>
        <item>Kate Kane, armed with a passion for social justice and a flair for speaking her mind, soars onto the streets of Gotham as Batwoman, an out lesbian and highly trained street fighter primed to snuff out the failing city\'s criminal resurgence. But don\'t call her a hero yet. In a city desperate for a savior, Kate must overcome her own demons before embracing the call to be Gotham\'s symbol of hope.</item>
        <item>In a mystical and dark city filled with humans, fairies and other creatures, a police detective investigates a series of gruesome murders leveled against the fairy population. During his investigation, the detective becomes the prime suspect and must find the real killer to clear his name.</item>
        <item>The Doom Patrol\’s members each suffered horrible accidents that gave them superhuman abilities — but also left them scarred and disfigured. Traumatized and downtrodden, the team found purpose through The Chief, who brought them together to investigate the weirdest phenomena in existence — and to protect Earth from what they find.</item>
        <item>Sofiane, Victor and Luisa, three seemingly incompatible teenagers find themselves bound together by a supernatural force.</item>
        <item>Set in an alternate history where \“superheroes\” are treated as outlaws, \“Watchmen\” embraces the nostalgia of the original groundbreaking graphic novel while attempting to break new ground of its own.</item>
        <item>Shinjuku ward east side. The center of the street with most chaos, There\'s a Kabukicho with full of neon lights. When the light is stronger, the shadow is deeper. The story begins when certain bizarre murder happens one night! Suspense? Or Comedy? Drama that cannot identify begins!</item>
        <item>A group of vigilantes known informally as \“The Boys\” set out to take down corrupt superheroes with no more than blue-collar grit and a willingness to fight dirty.</item>
        <item>After being dumped by her longtime boyfriend, a young woman must deal with her own imagination in order to literally and metaphorically re-enter the world of women, and rekindle the female friendships she left behind.</item>
        <item>A dual coming-of-age comedy exploring the impact of internet porn and social media, Mrs. Fletcher follows empty nest divorcée Eve Fletcher — as she reinvents her life to find the happiness and sexual fulfillment that\’s eluded her, and her college freshman son Brendan.</item>
    </string-array>
</resources>
